polygo/newparser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls vdecl
   4        | decls fdecl

   5  fdecl : typ ID LPAREN formal_list_opt RPAREN LBRACE vdecl_list_opt stmt_list_rev RBRACE

   6  typ : typ_a
   7      | BOOL
   8      | STRING
   9      | POLY

  10  typ_a : INT
  11        | FLOAT
  12        | COMPLEX

  13  formal : typ ID
  14         | typ_a LBRACKET INTLIT RBRACKET ID

  15  formal_list : formal
  16              | formal_list COMMA formal

  17  formal_list_opt :
  18                  | formal_list

  19  vdecl_list_opt :
  20                 | vdecl_list_opt vdecl

  21  vdecl : typ ID SEMI
  22        | typ ID ASSIGN primary SEMI
  23        | typ_a LBRACKET INTLIT RBRACKET ID SEMI
  24        | typ_a LBRACKET INTLIT RBRACKET ID ASSIGN LBRACKET primary_ap_list_opt RBRACKET SEMI

  25  stmt_list_rev : stmt
  26                | stmt_list_rev stmt

  27  stmt : expr SEMI
  28       | RETURN SEMI
  29       | RETURN expr SEMI
  30       | IF LPAREN expr RPAREN LBRACE stmt_list_rev RBRACE
  31       | IF LPAREN expr RPAREN LBRACE stmt_list_rev RBRACE ELSE LBRACE stmt_list_rev RBRACE
  32       | FOR LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN LBRACE stmt_list_rev RBRACE
  33       | FOREACH ID IN expr_list LBRACE stmt_list_rev RBRACE
  34       | WHILE LPAREN expr RPAREN LBRACE stmt_list_rev RBRACE

  35  expr : primary
  36       | LBRACKET primary_ap_list_opt RBRACKET
  37       | LPAREN expr RPAREN
  38       | expr PLUS expr
  39       | expr MINUS expr
  40       | expr TIMES expr
  41       | expr DIVIDE expr
  42       | expr EQ expr
  43       | expr NEQ expr
  44       | expr LT expr
  45       | expr LEQ expr
  46       | expr GT expr
  47       | expr GEQ expr
  48       | expr AND expr
  49       | expr OR expr
  50       | expr MODULUS expr
  51       | MINUS expr
  52       | NOT expr
  53       | PLUSONE expr
  54       | MINUSONE expr
  55       | ID LPAREN expr_list_opt RPAREN
  56       | extr_asn_value ASSIGN expr

  57  primary_list : primary
  58               | primary_list COMMA primary

  59  primary : primary_ap
  60          | LBRACE primary_ap_list_opt RBRACE
  61          | FALSE
  62          | TRUE
  63          | STRINGLIT

  64  primary_ap_list_opt :
  65                      | primary_ap_list

  66  primary_ap_list : primary_ap
  67                  | primary_ap_list COMMA primary_ap

  68  primary_ap : primary_c
  69             | LT primary_c COMMA primary_c GT
  70             | extr_asn_value

  71  extr_asn_value : ID
  72                 | ID LLBRACKET INTLIT RRBRACKET
  73                 | ID LBRACKET INTLIT RBRACKET

  74  primary_c_opt :
  75                | primary_c

  76  primary_c : INTLIT
  77            | FLOATLIT

  78  expr_list_opt :
  79                | expr_list

  80  expr_list : expr
  81            | expr_list COMMA expr

  82  expr_opt :
  83           | expr

  84  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (84)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (84)

	.  reduce 84


state 4
	program : decls . EOF  (1)
	decls : decls . vdecl  (3)
	decls : decls . fdecl  (4)

	INT  shift 5
	FLOAT  shift 6
	BOOL  shift 7
	COMPLEX  shift 8
	POLY  shift 9
	STRING  shift 10
	EOF  shift 11
	.  error

	vdecl  goto 12
	fdecl  goto 13
	typ  goto 14
	typ_a  goto 15


state 5
	typ_a : INT .  (10)

	.  reduce 10


state 6
	typ_a : FLOAT .  (11)

	.  reduce 11


state 7
	typ : BOOL .  (7)

	.  reduce 7


state 8
	typ_a : COMPLEX .  (12)

	.  reduce 12


state 9
	typ : POLY .  (9)

	.  reduce 9


state 10
	typ : STRING .  (8)

	.  reduce 8


state 11
	program : decls EOF .  (1)

	.  reduce 1


state 12
	decls : decls vdecl .  (3)

	.  reduce 3


state 13
	decls : decls fdecl .  (4)

	.  reduce 4


state 14
	fdecl : typ . ID LPAREN formal_list_opt RPAREN LBRACE vdecl_list_opt stmt_list_rev RBRACE  (5)
	vdecl : typ . ID SEMI  (21)
	vdecl : typ . ID ASSIGN primary SEMI  (22)

	ID  shift 16
	.  error


state 15
	typ : typ_a .  (6)
	vdecl : typ_a . LBRACKET INTLIT RBRACKET ID SEMI  (23)
	vdecl : typ_a . LBRACKET INTLIT RBRACKET ID ASSIGN LBRACKET primary_ap_list_opt RBRACKET SEMI  (24)

	LBRACKET  shift 17
	ID  reduce 6


state 16
	fdecl : typ ID . LPAREN formal_list_opt RPAREN LBRACE vdecl_list_opt stmt_list_rev RBRACE  (5)
	vdecl : typ ID . SEMI  (21)
	vdecl : typ ID . ASSIGN primary SEMI  (22)

	SEMI  shift 18
	LPAREN  shift 19
	ASSIGN  shift 20
	.  error


state 17
	vdecl : typ_a LBRACKET . INTLIT RBRACKET ID SEMI  (23)
	vdecl : typ_a LBRACKET . INTLIT RBRACKET ID ASSIGN LBRACKET primary_ap_list_opt RBRACKET SEMI  (24)

	INTLIT  shift 21
	.  error


state 18
	vdecl : typ ID SEMI .  (21)

	.  reduce 21


state 19
	fdecl : typ ID LPAREN . formal_list_opt RPAREN LBRACE vdecl_list_opt stmt_list_rev RBRACE  (5)
	formal_list_opt : .  (17)

	INT  shift 5
	FLOAT  shift 6
	BOOL  shift 7
	COMPLEX  shift 8
	POLY  shift 9
	STRING  shift 10
	RPAREN  reduce 17

	typ  goto 22
	formal_list_opt  goto 23
	typ_a  goto 24
	formal  goto 25
	formal_list  goto 26


state 20
	vdecl : typ ID ASSIGN . primary SEMI  (22)

	LBRACE  shift 27
	LT  shift 28
	TRUE  shift 29
	FALSE  shift 30
	INTLIT  shift 31
	FLOATLIT  shift 32
	ID  shift 33
	STRINGLIT  shift 34
	.  error

	primary  goto 35
	extr_asn_value  goto 36
	primary_ap  goto 37
	primary_c  goto 38


state 21
	vdecl : typ_a LBRACKET INTLIT . RBRACKET ID SEMI  (23)
	vdecl : typ_a LBRACKET INTLIT . RBRACKET ID ASSIGN LBRACKET primary_ap_list_opt RBRACKET SEMI  (24)

	RBRACKET  shift 39
	.  error


state 22
	formal : typ . ID  (13)

	ID  shift 40
	.  error


state 23
	fdecl : typ ID LPAREN formal_list_opt . RPAREN LBRACE vdecl_list_opt stmt_list_rev RBRACE  (5)

	RPAREN  shift 41
	.  error


state 24
	typ : typ_a .  (6)
	formal : typ_a . LBRACKET INTLIT RBRACKET ID  (14)

	LBRACKET  shift 42
	ID  reduce 6


state 25
	formal_list : formal .  (15)

	.  reduce 15


state 26
	formal_list : formal_list . COMMA formal  (16)
	formal_list_opt : formal_list .  (18)

	COMMA  shift 43
	RPAREN  reduce 18


state 27
	primary : LBRACE . primary_ap_list_opt RBRACE  (60)
	primary_ap_list_opt : .  (64)

	LT  shift 28
	INTLIT  shift 31
	FLOATLIT  shift 32
	ID  shift 33
	RBRACE  reduce 64

	primary_ap_list_opt  goto 44
	extr_asn_value  goto 36
	primary_ap  goto 45
	primary_ap_list  goto 46
	primary_c  goto 38


state 28
	primary_ap : LT . primary_c COMMA primary_c GT  (69)

	INTLIT  shift 31
	FLOATLIT  shift 32
	.  error

	primary_c  goto 47


state 29
	primary : TRUE .  (62)

	.  reduce 62


state 30
	primary : FALSE .  (61)

	.  reduce 61


state 31
	primary_c : INTLIT .  (76)

	.  reduce 76


state 32
	primary_c : FLOATLIT .  (77)

	.  reduce 77


state 33
	extr_asn_value : ID .  (71)
	extr_asn_value : ID . LLBRACKET INTLIT RRBRACKET  (72)
	extr_asn_value : ID . LBRACKET INTLIT RBRACKET  (73)

	LBRACKET  shift 48
	LLBRACKET  shift 49
	SEMI  reduce 71
	RBRACE  reduce 71
	COMMA  reduce 71
	RBRACKET  reduce 71


state 34
	primary : STRINGLIT .  (63)

	.  reduce 63


state 35
	vdecl : typ ID ASSIGN primary . SEMI  (22)

	SEMI  shift 50
	.  error


state 36
	primary_ap : extr_asn_value .  (70)

	.  reduce 70


state 37
	primary : primary_ap .  (59)

	.  reduce 59


state 38
	primary_ap : primary_c .  (68)

	.  reduce 68


state 39
	vdecl : typ_a LBRACKET INTLIT RBRACKET . ID SEMI  (23)
	vdecl : typ_a LBRACKET INTLIT RBRACKET . ID ASSIGN LBRACKET primary_ap_list_opt RBRACKET SEMI  (24)

	ID  shift 51
	.  error


state 40
	formal : typ ID .  (13)

	.  reduce 13


state 41
	fdecl : typ ID LPAREN formal_list_opt RPAREN . LBRACE vdecl_list_opt stmt_list_rev RBRACE  (5)

	LBRACE  shift 52
	.  error


state 42
	formal : typ_a LBRACKET . INTLIT RBRACKET ID  (14)

	INTLIT  shift 53
	.  error


state 43
	formal_list : formal_list COMMA . formal  (16)

	INT  shift 5
	FLOAT  shift 6
	BOOL  shift 7
	COMPLEX  shift 8
	POLY  shift 9
	STRING  shift 10
	.  error

	typ  goto 22
	typ_a  goto 24
	formal  goto 54


state 44
	primary : LBRACE primary_ap_list_opt . RBRACE  (60)

	RBRACE  shift 55
	.  error


state 45
	primary_ap_list : primary_ap .  (66)

	.  reduce 66


state 46
	primary_ap_list_opt : primary_ap_list .  (65)
	primary_ap_list : primary_ap_list . COMMA primary_ap  (67)

	COMMA  shift 56
	RBRACE  reduce 65
	RBRACKET  reduce 65


state 47
	primary_ap : LT primary_c . COMMA primary_c GT  (69)

	COMMA  shift 57
	.  error


state 48
	extr_asn_value : ID LBRACKET . INTLIT RBRACKET  (73)

	INTLIT  shift 58
	.  error


state 49
	extr_asn_value : ID LLBRACKET . INTLIT RRBRACKET  (72)

	INTLIT  shift 59
	.  error


state 50
	vdecl : typ ID ASSIGN primary SEMI .  (22)

	.  reduce 22


state 51
	vdecl : typ_a LBRACKET INTLIT RBRACKET ID . SEMI  (23)
	vdecl : typ_a LBRACKET INTLIT RBRACKET ID . ASSIGN LBRACKET primary_ap_list_opt RBRACKET SEMI  (24)

	SEMI  shift 60
	ASSIGN  shift 61
	.  error


state 52
	fdecl : typ ID LPAREN formal_list_opt RPAREN LBRACE . vdecl_list_opt stmt_list_rev RBRACE  (5)
	vdecl_list_opt : .  (19)

	.  reduce 19

	vdecl_list_opt  goto 62


state 53
	formal : typ_a LBRACKET INTLIT . RBRACKET ID  (14)

	RBRACKET  shift 63
	.  error


state 54
	formal_list : formal_list COMMA formal .  (16)

	.  reduce 16


state 55
	primary : LBRACE primary_ap_list_opt RBRACE .  (60)

	.  reduce 60


state 56
	primary_ap_list : primary_ap_list COMMA . primary_ap  (67)

	LT  shift 28
	INTLIT  shift 31
	FLOATLIT  shift 32
	ID  shift 33
	.  error

	extr_asn_value  goto 36
	primary_ap  goto 64
	primary_c  goto 38


state 57
	primary_ap : LT primary_c COMMA . primary_c GT  (69)

	INTLIT  shift 31
	FLOATLIT  shift 32
	.  error

	primary_c  goto 65


state 58
	extr_asn_value : ID LBRACKET INTLIT . RBRACKET  (73)

	RBRACKET  shift 66
	.  error


state 59
	extr_asn_value : ID LLBRACKET INTLIT . RRBRACKET  (72)

	RRBRACKET  shift 67
	.  error


state 60
	vdecl : typ_a LBRACKET INTLIT RBRACKET ID SEMI .  (23)

	.  reduce 23


state 61
	vdecl : typ_a LBRACKET INTLIT RBRACKET ID ASSIGN . LBRACKET primary_ap_list_opt RBRACKET SEMI  (24)

	LBRACKET  shift 68
	.  error


state 62
	fdecl : typ ID LPAREN formal_list_opt RPAREN LBRACE vdecl_list_opt . stmt_list_rev RBRACE  (5)
	vdecl_list_opt : vdecl_list_opt . vdecl  (20)

	LPAREN  shift 69
	LBRACE  shift 27
	LBRACKET  shift 70
	MINUS  shift 71
	PLUSONE  shift 72
	MINUSONE  shift 73
	LT  shift 28
	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 74
	RETURN  shift 75
	IF  shift 76
	FOR  shift 77
	FOREACH  shift 78
	WHILE  shift 79
	INT  shift 5
	FLOAT  shift 6
	BOOL  shift 7
	COMPLEX  shift 8
	POLY  shift 9
	STRING  shift 10
	INTLIT  shift 31
	FLOATLIT  shift 32
	ID  shift 80
	STRINGLIT  shift 34
	.  error

	vdecl  goto 81
	typ  goto 82
	stmt_list_rev  goto 83
	typ_a  goto 15
	primary  goto 84
	stmt  goto 85
	expr  goto 86
	extr_asn_value  goto 87
	primary_ap  goto 37
	primary_c  goto 38


state 63
	formal : typ_a LBRACKET INTLIT RBRACKET . ID  (14)

	ID  shift 88
	.  error


state 64
	primary_ap_list : primary_ap_list COMMA primary_ap .  (67)

	.  reduce 67


state 65
	primary_ap : LT primary_c COMMA primary_c . GT  (69)

	GT  shift 89
	.  error


state 66
	extr_asn_value : ID LBRACKET INTLIT RBRACKET .  (73)

	.  reduce 73


state 67
	extr_asn_value : ID LLBRACKET INTLIT RRBRACKET .  (72)

	.  reduce 72


state 68
	vdecl : typ_a LBRACKET INTLIT RBRACKET ID ASSIGN LBRACKET . primary_ap_list_opt RBRACKET SEMI  (24)
	primary_ap_list_opt : .  (64)

	LT  shift 28
	INTLIT  shift 31
	FLOATLIT  shift 32
	ID  shift 33
	RBRACKET  reduce 64

	primary_ap_list_opt  goto 90
	extr_asn_value  goto 36
	primary_ap  goto 45
	primary_ap_list  goto 46
	primary_c  goto 38


state 69
	expr : LPAREN . expr RPAREN  (37)

	LPAREN  shift 69
	LBRACE  shift 27
	LBRACKET  shift 70
	MINUS  shift 71
	PLUSONE  shift 72
	MINUSONE  shift 73
	LT  shift 28
	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 74
	INTLIT  shift 31
	FLOATLIT  shift 32
	ID  shift 80
	STRINGLIT  shift 34
	.  error

	primary  goto 84
	expr  goto 91
	extr_asn_value  goto 87
	primary_ap  goto 37
	primary_c  goto 38


state 70
	expr : LBRACKET . primary_ap_list_opt RBRACKET  (36)
	primary_ap_list_opt : .  (64)

	LT  shift 28
	INTLIT  shift 31
	FLOATLIT  shift 32
	ID  shift 33
	RBRACKET  reduce 64

	primary_ap_list_opt  goto 92
	extr_asn_value  goto 36
	primary_ap  goto 45
	primary_ap_list  goto 46
	primary_c  goto 38


state 71
	expr : MINUS . expr  (51)

	LPAREN  shift 69
	LBRACE  shift 27
	LBRACKET  shift 70
	MINUS  shift 71
	PLUSONE  shift 72
	MINUSONE  shift 73
	LT  shift 28
	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 74
	INTLIT  shift 31
	FLOATLIT  shift 32
	ID  shift 80
	STRINGLIT  shift 34
	.  error

	primary  goto 84
	expr  goto 93
	extr_asn_value  goto 87
	primary_ap  goto 37
	primary_c  goto 38


state 72
	expr : PLUSONE . expr  (53)

	LPAREN  shift 69
	LBRACE  shift 27
	LBRACKET  shift 70
	MINUS  shift 71
	PLUSONE  shift 72
	MINUSONE  shift 73
	LT  shift 28
	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 74
	INTLIT  shift 31
	FLOATLIT  shift 32
	ID  shift 80
	STRINGLIT  shift 34
	.  error

	primary  goto 84
	expr  goto 94
	extr_asn_value  goto 87
	primary_ap  goto 37
	primary_c  goto 38


state 73
	expr : MINUSONE . expr  (54)

	LPAREN  shift 69
	LBRACE  shift 27
	LBRACKET  shift 70
	MINUS  shift 71
	PLUSONE  shift 72
	MINUSONE  shift 73
	LT  shift 28
	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 74
	INTLIT  shift 31
	FLOATLIT  shift 32
	ID  shift 80
	STRINGLIT  shift 34
	.  error

	primary  goto 84
	expr  goto 95
	extr_asn_value  goto 87
	primary_ap  goto 37
	primary_c  goto 38


state 74
	expr : NOT . expr  (52)

	LPAREN  shift 69
	LBRACE  shift 27
	LBRACKET  shift 70
	MINUS  shift 71
	PLUSONE  shift 72
	MINUSONE  shift 73
	LT  shift 28
	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 74
	INTLIT  shift 31
	FLOATLIT  shift 32
	ID  shift 80
	STRINGLIT  shift 34
	.  error

	primary  goto 84
	expr  goto 96
	extr_asn_value  goto 87
	primary_ap  goto 37
	primary_c  goto 38


state 75
	stmt : RETURN . SEMI  (28)
	stmt : RETURN . expr SEMI  (29)

	SEMI  shift 97
	LPAREN  shift 69
	LBRACE  shift 27
	LBRACKET  shift 70
	MINUS  shift 71
	PLUSONE  shift 72
	MINUSONE  shift 73
	LT  shift 28
	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 74
	INTLIT  shift 31
	FLOATLIT  shift 32
	ID  shift 80
	STRINGLIT  shift 34
	.  error

	primary  goto 84
	expr  goto 98
	extr_asn_value  goto 87
	primary_ap  goto 37
	primary_c  goto 38


state 76
	stmt : IF . LPAREN expr RPAREN LBRACE stmt_list_rev RBRACE  (30)
	stmt : IF . LPAREN expr RPAREN LBRACE stmt_list_rev RBRACE ELSE LBRACE stmt_list_rev RBRACE  (31)

	LPAREN  shift 99
	.  error


state 77
	stmt : FOR . LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN LBRACE stmt_list_rev RBRACE  (32)

	LPAREN  shift 100
	.  error


state 78
	stmt : FOREACH . ID IN expr_list LBRACE stmt_list_rev RBRACE  (33)

	ID  shift 101
	.  error


state 79
	stmt : WHILE . LPAREN expr RPAREN LBRACE stmt_list_rev RBRACE  (34)

	LPAREN  shift 102
	.  error


state 80
	expr : ID . LPAREN expr_list_opt RPAREN  (55)
	extr_asn_value : ID .  (71)
	extr_asn_value : ID . LLBRACKET INTLIT RRBRACKET  (72)
	extr_asn_value : ID . LBRACKET INTLIT RBRACKET  (73)

	LPAREN  shift 103
	LBRACKET  shift 48
	LLBRACKET  shift 49
	SEMI  reduce 71
	RPAREN  reduce 71
	LBRACE  reduce 71
	COMMA  reduce 71
	PLUS  reduce 71
	MINUS  reduce 71
	TIMES  reduce 71
	DIVIDE  reduce 71
	MODULUS  reduce 71
	ASSIGN  reduce 71
	EQ  reduce 71
	NEQ  reduce 71
	LT  reduce 71
	LEQ  reduce 71
	GT  reduce 71
	GEQ  reduce 71
	AND  reduce 71
	OR  reduce 71


state 81
	vdecl_list_opt : vdecl_list_opt vdecl .  (20)

	.  reduce 20


state 82
	vdecl : typ . ID SEMI  (21)
	vdecl : typ . ID ASSIGN primary SEMI  (22)

	ID  shift 104
	.  error


state 83
	fdecl : typ ID LPAREN formal_list_opt RPAREN LBRACE vdecl_list_opt stmt_list_rev . RBRACE  (5)
	stmt_list_rev : stmt_list_rev . stmt  (26)

	LPAREN  shift 69
	LBRACE  shift 27
	RBRACE  shift 105
	LBRACKET  shift 70
	MINUS  shift 71
	PLUSONE  shift 72
	MINUSONE  shift 73
	LT  shift 28
	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 74
	RETURN  shift 75
	IF  shift 76
	FOR  shift 77
	FOREACH  shift 78
	WHILE  shift 79
	INTLIT  shift 31
	FLOATLIT  shift 32
	ID  shift 80
	STRINGLIT  shift 34
	.  error

	primary  goto 84
	stmt  goto 106
	expr  goto 86
	extr_asn_value  goto 87
	primary_ap  goto 37
	primary_c  goto 38


state 84
	expr : primary .  (35)

	.  reduce 35


state 85
	stmt_list_rev : stmt .  (25)

	.  reduce 25


state 86
	stmt : expr . SEMI  (27)
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : expr . MODULUS expr  (50)

	SEMI  shift 107
	PLUS  shift 108
	MINUS  shift 109
	TIMES  shift 110
	DIVIDE  shift 111
	MODULUS  shift 112
	EQ  shift 113
	NEQ  shift 114
	LT  shift 115
	LEQ  shift 116
	GT  shift 117
	GEQ  shift 118
	AND  shift 119
	OR  shift 120
	.  error


state 87
	expr : extr_asn_value . ASSIGN expr  (56)
	primary_ap : extr_asn_value .  (70)

	ASSIGN  shift 121
	SEMI  reduce 70
	RPAREN  reduce 70
	LBRACE  reduce 70
	COMMA  reduce 70
	PLUS  reduce 70
	MINUS  reduce 70
	TIMES  reduce 70
	DIVIDE  reduce 70
	MODULUS  reduce 70
	EQ  reduce 70
	NEQ  reduce 70
	LT  reduce 70
	LEQ  reduce 70
	GT  reduce 70
	GEQ  reduce 70
	AND  reduce 70
	OR  reduce 70


state 88
	formal : typ_a LBRACKET INTLIT RBRACKET ID .  (14)

	.  reduce 14


state 89
	primary_ap : LT primary_c COMMA primary_c GT .  (69)

	.  reduce 69


state 90
	vdecl : typ_a LBRACKET INTLIT RBRACKET ID ASSIGN LBRACKET primary_ap_list_opt . RBRACKET SEMI  (24)

	RBRACKET  shift 122
	.  error


state 91
	expr : LPAREN expr . RPAREN  (37)
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : expr . MODULUS expr  (50)

	RPAREN  shift 123
	PLUS  shift 108
	MINUS  shift 109
	TIMES  shift 110
	DIVIDE  shift 111
	MODULUS  shift 112
	EQ  shift 113
	NEQ  shift 114
	LT  shift 115
	LEQ  shift 116
	GT  shift 117
	GEQ  shift 118
	AND  shift 119
	OR  shift 120
	.  error


state 92
	expr : LBRACKET primary_ap_list_opt . RBRACKET  (36)

	RBRACKET  shift 124
	.  error


state 93
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : expr . MODULUS expr  (50)
	expr : MINUS expr .  (51)

	.  reduce 51


state 94
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : expr . MODULUS expr  (50)
	expr : PLUSONE expr .  (53)

	.  reduce 53


state 95
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : expr . MODULUS expr  (50)
	expr : MINUSONE expr .  (54)

	.  reduce 54


state 96
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : expr . MODULUS expr  (50)
	expr : NOT expr .  (52)

	.  reduce 52


state 97
	stmt : RETURN SEMI .  (28)

	.  reduce 28


state 98
	stmt : RETURN expr . SEMI  (29)
	expr : expr . PLUS expr  (38)
	expr : expr . MINUS expr  (39)
	expr : expr . TIMES expr  (40)
	expr : expr . DIVIDE expr  (41)
	expr : expr . EQ expr  (42)
	expr : expr . NEQ expr  (43)
	expr : expr . LT expr  (44)
	expr : expr . LEQ expr  (45)
	expr : expr . GT expr  (46)
	expr : expr . GEQ expr  (47)
	expr : expr . AND expr  (48)
	expr : expr . OR expr  (49)
	expr : expr . MODULUS expr  (50)

	SEMI  shift 125
	PLUS  shift 108
	MINUS  shift 109
	TIMES  shift 110
	DIVIDE  shift 111
	MODULUS  shift 112
	EQ  shift 113
	NEQ  shift 114
	LT  shift 115
	LEQ  shift 116
	GT  shift 117
	GEQ  shift 118
	AND  shift 119
	OR  shift 120
	.  error


state 99
	stmt : IF LPAREN . expr RPAREN LBRACE stmt_list_rev RBRACE  (30)
	stmt : IF LPAREN . expr RPAREN LBRACE stmt_list_rev RBRACE ELSE LBRACE stmt_list_rev RBRACE  (31)

	LPAREN  shift 69
	LBRACE  shift 27
	LBRACKET  shift 70
	MINUS  shift 71
	PLUSONE  shift 72
	MINUSONE  shift 73
	LT  shift 28
	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 74
	INTLIT  shift 31
	FLOATLIT  shift 32
	ID  shift 80
	STRINGLIT  shift 34
	.  error

	primary  goto 84
	expr  goto 126
	extr_asn_value  goto 87
	primary_ap  goto 37
	primary_c  goto 38


state 100
	stmt : FOR LPAREN . expr_opt SEMI expr SEMI expr_opt RPAREN LBRACE stmt_list_rev RBRACE  (32)
	expr_opt : .  (82)

	LPAREN  shift 69
	LBRACE  shift 27
	LBRACKET  shift 70
	MINUS  shift 71
	PLUSONE  shift 72
	MINUSONE  shift 73
	LT  shift 28
	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 74
	INTLIT  shift 31
	FLOATLIT  shift 32
	ID  shift 80
	STRINGLIT  shift 34
	SEMI  reduce 82

	primary  goto 84
	expr  goto 127
	expr_opt  goto 128
	extr_asn_value  goto 87
	primary_ap  goto 37
	primary_c  goto 38


state 101
	stmt : FOREACH ID . IN expr_list LBRACE stmt_list_rev RBRACE  (33)

	IN  shift 129
	.  error


state 102
	stmt : WHILE LPAREN . expr RPAREN LBRACE stmt_list_rev RBRACE  (34)

	LPAREN  shift 69
	LBRACE  shift 27
	LBRACKET  shift 70
	MINUS  shift 71
	PLUSONE  shift 72
	MINUSONE  shift 73
	LT  shift 28
	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 74
	INTLIT  shift 31
	FLOATLIT  shift 32
	ID  shift 80
	STRINGLIT  shift 34
	.  error

	primary  goto 84
	expr  goto 130
	extr_asn_value  goto 87
	primary_ap  goto 37
	primary_c  goto 38


state 103
	expr : ID LPAREN . expr_list_opt RPAREN  (55)
	expr_list_opt : .  (78)

	LPAREN  shift 69
	LBRACE  shift 27
	LBRACKET  shift 70
	MINUS  shift 71
	PLUSONE  shift 72
	MINUSONE  shift 73
	LT  shift 28
	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 74
	INTLIT  shift 31
	FLOATLIT  shift 32
	ID  shift 80
	STRINGLIT  shift 34
	RPAREN  reduce 78

	primary  goto 84
	expr  goto 131
	expr_list  goto 132
	expr_list_opt  goto 133
	extr_asn_value  goto 87
	primary_ap  goto 37
	primary_c  goto 38


state 104
	vdecl : typ ID . SEMI  (21)
	vdecl : typ ID . ASSIGN primary SEMI  (22)

	SEMI  shift 18
	ASSIGN  shift 20
	.  error


state 105
	fdecl : typ ID LPAREN formal_list_opt RPAREN LBRACE vdecl_list_opt stmt_list_rev RBRACE .  (5)

	.  reduce 5


state 106
	stmt_list_rev : stmt_list_rev stmt .  (26)

	.  reduce 26


state 107
	stmt : expr SEMI .  (27)

	.  reduce 27


state 108
	expr : expr PLUS . expr  (38)

	LPAREN  shift 69
	LBRACE  shift 27
	LBRACKET  shift 70
	MINUS  shift 71
	PLUSONE  shift 72
	MINUSONE  shift 73
	LT  shift 28
	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 74
	INTLIT  shift 31
	FLOATLIT  shift 32
	ID  shift 80
	STRINGLIT  shift 34
	.  error

	primary  goto 84
	expr  goto 134
	extr_asn_value  goto 87
	primary_ap  goto 37
	primary_c  goto 38


state 109
	expr : expr MINUS . expr  (39)

	LPAREN  shift 69
	LBRACE  shift 27
	LBRACKET  shift 70
	MINUS  shift 71
	PLUSONE  shift 72
	MINUSONE  shift 73
	LT  shift 28
	TRUE  shift 29
	FALSE  shift 30
	NOT  shift 74
	INTLIT  shift 31
	FLOATLIT  shift 32
	ID  shift 80
	STRINGLIT  shift 34
	.  error

	primary  goto 84
	expr  goto 135
	extr_asn_value  goto 87
	primary_ap  goto 37
	primary_c  goto 38


state 110
	expr : expr TIMES . expr  (40)

	LPAREN  shift 69
